<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LinearLayoutActivity"
    tools:showIn="@layout/activity_linear_layout"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Peron Details"
        />
    <!-- id -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lla_lblId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblId"/>
        <EditText
            android:id="@+id/lla_editId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="" />
    </LinearLayout>

    <!-- name -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/lla_lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblName"
            />
        <EditText
            android:id="@+id/lla_editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""/>
    </LinearLayout>

    <!-- password -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/lla_lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPassword"
            />
        <EditText
            android:id="@+id/lla_editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            />
    </LinearLayout>

    <!-- age -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/lla_lblAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAge" />
        <EditText
            android:id="@+id/lla_editAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text=""
            />
    </LinearLayout>

    <!-- wage -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/lla_lblWage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblWage"
            />
        <EditText
            android:id="@+id/lla_editWage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:text=""
            />
    </LinearLayout>

    <!-- active -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lla_lblActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblActive"
            />
        <EditText
            android:id="@+id/lla_editActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:text=""
            />
    </LinearLayout>
    <!-- buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/lla_btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSubmit"
            />
        <Button
            android:id="@+id/lla_btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"
            />
        <Button
            android:id="@+id/lla_btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            />

        <Button
            android:id="@+id/lla_btnMainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MainAct."
            />
    </LinearLayout>

    <!-- log -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/lla_lblLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblLogMessage"
            />

        <EditText
            android:id="@+id/lla_editLog"
            android:layout_width="372dp"
            android:layout_height="153dp"
            android:ems="100"
            android:inputType="textMultiLine" />

    </LinearLayout>



</LinearLayout>