<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ReceiverWorkerActivity"
    tools:showIn="@layout/activity_receiver_worker">


    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Insert seconds"
            />
        <EditText
            android:id="@+id/rwa_editSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            />
    </TableRow>



    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="&lt;&lt;Worker Properties&gt;&gt;"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblId"
            />
        <EditText
            android:id="@+id/rwa_editId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            />
    </TableRow>


    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblName"
            />
        <EditText
            android:id="@+id/rwa_editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPassword"
            />
        <EditText
            android:id="@+id/rwa_editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAge"
            />
        <EditText
            android:id="@+id/rwa_editAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblWage"
            />
        <EditText
            android:id="@+id/rwa_editWage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblActive"
            />
        <EditText
            android:id="@+id/rwa_editActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            />
    </TableRow>
    
    <TableRow>
        <Button 
            android:id="@+id/rwa_btnSetupTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Setup Timer"
            />

        <Button
            android:id="@+id/rwa_btnMainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMainActivity"
            />
    </TableRow>
    
</TableLayout>