<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GridLayoutActivity"
    tools:showIn="@layout/activity_grid_layout"
    android:columnCount="2"
    >

    <TextView
        android:id="@+id/gla_lblTitle"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:layout_column="0"
        android:text="GridLayout Example"
        />

    <TextView
        android:id="@+id/gla_lblId"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/lblId"
        />
    <EditText
        android:id="@+id/gla_editId"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:layout_column="1"
        />




    <TextView
        android:id="@+id/gla_lbName"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/lblName"
        />
    <EditText
        android:id="@+id/gla_editName"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:layout_column="1"
        />


    <TextView
        android:id="@+id/gla_lblPassword"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/lblPassword"
        />
    <EditText
        android:id="@+id/gla_editPassword"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:layout_column="1"
        />


    <TextView
        android:id="@+id/gla_lblAge"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/lblId"
        />
    <EditText
        android:id="@+id/gla_editAge"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:layout_column="1"
        />


    <TextView
        android:id="@+id/gla_lblWage"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/lblWage"
        />
    <EditText
        android:id="@+id/gla_editWage"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:layout_column="1"
        />



    <TextView
        android:id="@+id/gla_lblActive"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/lblId"
        />
    <EditText
        android:id="@+id/gla_editActive"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:layout_column="1"
        />

    <Button
        android:id="@+id/gla_btnMainActivity"
        android:text="MainActivity"
        />




</GridLayout>